Refactoring names for the CRUD methods
